bug fix for Issue 14974 - Image alignment options named 'undefined' in "Add Image" dialog

--- a/ckeditor/_source/skins/kama/dialog.css
+++ b/ckeditor/_source/skins/kama/dialog.css
@@ -655,6 +655,7 @@ body .cke_dialog
 {
 	border: 1px solid #a0a0a0;
 	background-color: white;
+        width: 100%;
 }
 
 .cke_skin_kama .cke_dialog_ui_input_file
